<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        android:autofillHints="false"
        android:inputType="none"
        tools:ignore="LabelFor"
        />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.98">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnone"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="oneBtn"

                android:text="@string/one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btntwo"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="twoBtn"

                android:text="@string/two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnthree"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="threeBtn"

                android:text="@string/three"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnfour"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fourBtn"

                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnfive"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fiveBtn"

                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnsix"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sixBtn"

                android:text="@string/six"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnseven"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sevenBtn"

                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btneight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="eightBtn"

                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnnine"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="nineBtn"

                android:text="@string/nine"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnzero"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="zeroBtn"

                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="pointBtn"

                android:text="@string/point"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnclear"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="plusBtn"

                android:text="@string/add"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="minusBtn"

                android:text="@string/sub"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnTimes"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="multiplyBtn"

                android:text="@string/times"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="divideBtn"

                android:text="@string/div"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sqrtBtn"

                android:text="@string/square"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="equalBtn"
                android:text="@string/equal"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>